--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
+    "@stripe/stripe-js": "^1.46.0",
+    "axios": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.0",
-    "next": "13.1.0",
+    "next": "^13.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.5.0"
   }
 }
